--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 python = "^3.11"
 pandas = "^2.2.0"
 streamlit = "^1.31.0"
-tabula = "^1.0.5"
+xlrd = "^2.0.1"
 
 
 [tool.poetry.group.docs.dependencies]
