--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.11"
 pandas = "^2.2.0"
 streamlit = "^1.31.0"
 openpyxl = "^3.1.2"
+xlrd = "^2.0.1"
 
 
 [tool.poetry.group.docs.dependencies]
